# bazel-snapshots

./: .bazelignore  .bazelrc  .ci.bazelrc  .gitattributes  .gitignore  .secrets.yaml  BUILD.bazel  MODULE.bazel  README.md  RELEASING.md  WORKSPACE  deps.bzl  go.mod  go.sum  internal_deps.bzl  repo.bzl  repositories.bzl
.github/: CODEOWNERS  renovate.json5
.github/scripts/: import_snippets.sh  workplace-snippet.sh
.github/workflows/: ci.yaml  release.yaml
docker/: BUILD.bazel  docker.bzl
docs/: BUILD.bazel  defs.md  snapshots.md  toolchain.md
examples/build-from-source/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
examples/change-tracker/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  old_tracker.json
examples/integrate-with-other-rules/: BUILD.bazel  README.md  WORKSPACE  old_tracker.json
examples/integrate-with-other-rules/rules/deployable-filegroup/: deployable-filegroup.bzl
examples/use-binaries/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
snapshots/: BUILD.bazel  defs.bzl  dependencies.bzl  extensions.bzl  providers.bzl  repositories.bzl  runner.tmpl.sh  snapshots.bzl  toolchain.bzl
snapshots/go/cmd/snapshots/: BUILD.bazel  collect.go  config.go  diff.go  digest.go  digest_test.go  format.go  get.go  main.go  push.go  root.go  snapshots.go  tag.go  utils.go
snapshots/go/cmd/snaptool/: BUILD.bazel  collect.go  diff.go  get.go  snaptool.go  utils.go
snapshots/go/pkg/bazel/: BUILD.bazel  bazel.go  bazel_test.go  buildevents.go  cache.go  cache_test.go  grpc_client.go  grpc_client_test.go
snapshots/go/pkg/cache/: BUILD.bazel  cache.go  cache_test.go  credential_helper.go  grpc_client.go  grpc_client_test.go
snapshots/go/pkg/collecter/: BUILD.bazel  collecter.go  collecter_test.go  credential_helper.go
snapshots/go/pkg/config/: BUILD.bazel  config.go
snapshots/go/pkg/differ/: BUILD.bazel  differ.go
snapshots/go/pkg/digester/: BUILD.bazel  digester.go
snapshots/go/pkg/getter/: BUILD.bazel  getter.go  getter_test.go
snapshots/go/pkg/models/: BUILD.bazel  models.go
snapshots/go/pkg/pusher/: BUILD.bazel  pusher.go  pusher_test.go
snapshots/go/pkg/storage/: BUILD.bazel  gcs.go  storage.go  storage_test.go  url.go  url_test.go
snapshots/go/pkg/tagger/: BUILD.bazel  tagger.go  tagger_test.go
snapshots/private/: BUILD.bazel  runner.tmpl.sh  snapshots.bzl  toolchains_repo.bzl
tests/: BUILD.bazel  import_snippets_test.go
tests/lots-of-deps/: BUILD.bazel  deploy.sh  files_digest.json
tools/: BUILD.bazel  gopackagesdriver.sh  release.sh  snaptool_toolchain.bzl
