load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/cognitedata/bazel-snapshots
# gazelle:proto disable_global
# gazelle:resolve go google.golang.org/genproto/googleapis/rpc/code @go_googleapis//google/rpc:code_go_proto
# gazelle:resolve go google.golang.org/genproto/googleapis/api/annotations @go_googleapis//google/api:annotations_go_proto
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=snapshots/dependencies.bzl%go_dependencies",
        "-build_file_proto_mode=disable_global",
        "-prune",
    ],
    command = "update-repos",
)
