load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/cognitedata/bazel-snapshots
# gazelle:proto disable_global
gazelle(name = "gazelle")

# Gazelle check: exits with 1 if gazelle wants to make changes.
#
# Usage:
#   bazel run gazelle_check
gazelle(
    name = "gazelle_check",
    command = "update",
    extra_args = ["-mode=diff"],
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=snapshots/dependencies.bzl%go_dependencies",
        "-build_file_proto_mode=disable_global",
        "-prune",
    ],
    command = "update-repos",
)
