load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/cognitedata/bazel-snapshots
# gazelle:proto disable_global
gazelle(name = "gazelle")

# Gazelle check: exits with 1 if gazelle wants to make changes.
#
# Usage:
#   bazel run gazelle_check
gazelle(
    name = "gazelle_check",
    command = "update",
    extra_args = ["-mode=diff"],
)
