module(
    name = "com_cognitedata_bazel_snapshots",
    version = "0.0.0",
)

bazel_dep(name = "gazelle", version = "0.44.0", repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_go", version = "0.55.1", repo_name = "io_bazel_rules_go")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_olekukonko_tablewriter",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
    "io_beyondstorage_go_services_gcs_v3",
    "io_beyondstorage_go_v5",
    "org_golang_google_genproto_googleapis_bytestream",
    "org_golang_google_grpc",
)

snapshots = use_extension("//snapshots:extensions.bzl", "snapshots")
snapshots.toolchains(from_source = True)
use_repo(
    snapshots,
    "snapshots_snaptool_toolchains",
)

register_toolchains("@snapshots_snaptool_toolchains//:all")
