module(
    name = "com_cognitedata_bazel_snapshots",
    version = "0.0.0",
)

bazel_dep(name = "gazelle", version = "0.45.0", repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_olekukonko_tablewriter",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
    "dev_gocloud",
    "org_golang_google_genproto_googleapis_bytestream",
    "org_golang_google_grpc",
)

snapshots = use_extension("//snapshots:extensions.bzl", "snapshots")
snapshots.toolchains(from_source = True)
use_repo(
    snapshots,
    "snapshots_snaptool_toolchains",
)

register_toolchains("@snapshots_snaptool_toolchains//:all")
