load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

toolchain_type(
    name = "snaptool_toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//snapshots/private:snapshots",
    ],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
)

stardoc(
    name = "defs_doc",
    out = "defs.md",
    input = "defs.bzl",
    deps = [":defs"],
    visibility = ["//docs:__pkg__"],
)

stardoc(
    name = "toolchain_doc",
    out = "toolchain.md",
    input = "toolchain.bzl",
    deps = [":toolchain"],
    visibility = ["//docs:__pkg__"],
)
