load("@com_cognitedata_bazel_snapshots//snapshots:snapshots.bzl", "snapshots")
load("//rules/deployable-filegroup:deployable-filegroup.bzl", "deployable_filegroup")
# Output based change detection.
#
# Usage:
#   # generate manifest
#   bazel run snapshots -- collect
snapshots(name = "snapshots")

deployable_filegroup(
    name = "artifact_1",
    srcs = [
        "source_file_1.txt",
    ],
)

deployable_filegroup(
    name = "artifact_2",
    srcs = [
        "source_file_2.txt",
    ],
)

deployable_filegroup(
    name = "artifact_3",
    srcs = [
        "source_file_1.txt",
        "source_file_2.txt",
    ],
)
