load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

exports_files(["runner.tmpl.sh"])

bzl_library(
    name = "snapshots",
    srcs = ["snapshots.bzl"],
    visibility = ["//snapshots:__subpackages__"],
    deps = [
        "@bazel_skylib//lib:shell",
        "@rules_shell//shell:rules_bzl",
    ],
)

stardoc(
    name = "snapshots_doc",
    out = "snapshots.md",
    input = "snapshots.bzl",
    deps = [":snapshots"],
    visibility = ["//docs:__pkg__"],
)
