load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "snapshots_lib",
    srcs = [
        "collect.go",
        "diff.go",
        "digest.go",
        "get.go",
        "main.go",
        "push.go",
        "root.go",
        "snapshots.go",
        "tag.go",
        "utils.go",
    ],
    importpath = "github.com/cognitedata/bazel-snapshots/snapshots/go/cmd/snapshots",
    deps = [
        "//snapshots/go/pkg/collecter",
        "//snapshots/go/pkg/differ",
        "//snapshots/go/pkg/digester",
        "//snapshots/go/pkg/getter",
        "//snapshots/go/pkg/models",
        "//snapshots/go/pkg/pusher",
        "//snapshots/go/pkg/tagger",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "snapshots",
    embed = [":snapshots_lib"],
    visibility = ["//visibility:public"],
)

PLATFORMS = [
    ("linux", "amd64"),
    ("linux", "arm64"),
    ("darwin", "amd64"),
    ("darwin", "arm64"),
]

[
    go_binary(
        name = "snapshots-{goos}-{goarch}".format(
            goarch = goarch,
            goos = goos,
        ),
        embed = [":snapshots_lib"],
        goarch = goarch,
        goos = goos,
        visibility = ["//visibility:public"],
    )
    for (goos, goarch) in PLATFORMS
]