load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "collecter",
    srcs = ["collecter.go"],
    importpath = "github.com/cognitedata/bazel-snapshots/snapshots/go/pkg/collecter",
    visibility = ["//visibility:public"],
    deps = [
        "//snapshots/go/pkg/bazel",
        "//snapshots/go/pkg/models",
        "@org_golang_google_grpc//:grpc",
    ],
)
