load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "collecter",
    srcs = [
        "collecter.go",
        "credential_helper.go",
    ],
    importpath = "github.com/cognitedata/bazel-snapshots/snapshots/go/pkg/collecter",
    visibility = ["//visibility:public"],
    deps = [
        "//snapshots/go/pkg/bazel",
        "//snapshots/go/pkg/cache",
        "//snapshots/go/pkg/models",
        "@org_golang_google_grpc//metadata",
    ],
)

go_test(
    name = "collecter_test",
    srcs = ["collecter_test.go"],
    embed = [":collecter"],
    deps = [
        "//snapshots/go/pkg/bazel",
        "@com_github_stretchr_testify//assert",
    ],
)
