load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "differ",
    srcs = ["differ.go"],
    importpath = "github.com/cognitedata/bazel-snapshots/snapshots/go/pkg/differ",
    visibility = ["//visibility:public"],
    deps = [
        "//snapshots/go/pkg/collecter",
        "//snapshots/go/pkg/models",
        "@com_github_olekukonko_tablewriter//:tablewriter",
        "@com_github_olekukonko_tablewriter//tw",
    ],
)
