load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "getter",
    srcs = ["getter.go"],
    importpath = "github.com/cognitedata/bazel-snapshots/snapshots/go/pkg/getter",
    visibility = ["//visibility:public"],
    deps = [
        "//snapshots/go/pkg/models",
        "//snapshots/go/pkg/storage",
    ],
)
