load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "getter",
    srcs = ["getter.go"],
    importpath = "github.com/cognitedata/bazel-snapshots/snapshots/go/pkg/getter",
    visibility = ["//visibility:public"],
    deps = [
        "//snapshots/go/pkg/models",
        "//snapshots/go/pkg/storage",
    ],
)

go_test(
    name = "getter_test",
    srcs = ["getter_test.go"],
    embed = [":getter"],
    deps = [
        "//snapshots/go/pkg/storage",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
