load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pusher",
    srcs = ["pusher.go"],
    importpath = "github.com/cognitedata/bazel-snapshots/snapshots/go/pkg/pusher",
    visibility = ["//visibility:public"],
    deps = [
        "//snapshots/go/pkg/models",
        "//snapshots/go/pkg/storage",
    ],
)
