load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pusher",
    srcs = ["pusher.go"],
    importpath = "github.com/cognitedata/bazel-snapshots/snapshots/go/pkg/pusher",
    visibility = ["//visibility:public"],
    deps = [
        "//snapshots/go/pkg/models",
        "//snapshots/go/pkg/storage",
    ],
)

go_test(
    name = "pusher_test",
    srcs = ["pusher_test.go"],
    embed = [":pusher"],
    deps = [
        "//snapshots/go/pkg/models",
        "//snapshots/go/pkg/storage",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
