load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = [
        "storage.go",
        "url.go",
    ],
    importpath = "github.com/cognitedata/bazel-snapshots/snapshots/go/pkg/storage",
    visibility = ["//visibility:public"],
    deps = [
        "@dev_gocloud//blob",
        "@dev_gocloud//blob/fileblob",
        "@dev_gocloud//blob/gcsblob",
        "@dev_gocloud//blob/s3blob",
        "@dev_gocloud//gcerrors",
    ],
)

go_test(
    name = "storage_test",
    srcs = [
        "storage_test.go",
        "url_test.go",
    ],
    embed = [":storage"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
