load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = ["storage.go"],
    importpath = "github.com/cognitedata/bazel-snapshots/snapshots/go/pkg/storage",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@io_beyondstorage_go_services_gcs_v3//:gcs",
        "@io_beyondstorage_go_services_s3_v3//:s3",
        "@io_beyondstorage_go_v5//pairs",
        "@io_beyondstorage_go_v5//services",
        "@io_beyondstorage_go_v5//types",
    ],
)
